# FeedGenerator

./: .env  .gitignore  .gitlab-ci.txt  Cargo.toml  Dockerfile  README.md  build.sh  cert.pem  key.pem  render.yaml
.github/workflows/: rust.yml
config/: job_types.rs
lib/: matrix.csv  network_snapshot
requests/: auth.http  feed.http  root.http
src/: Cargo.toml  README.md  auth.rs  handlers.rs  job_slicer.rs  job_slicer_depr.rs  job_type_matcher.rs  job_type_matrix.rs  lib.rs  logger.rs  main.rs  meta.rs  meta_test.rs  models.rs  ranker.rs  t.rs  t_score.rs  test.csv  test_auth.rs
src/config/: app_state.rs
src/controllers/: handlers.rs  models.rs
src/lib/: machine_learning.rs
src/log/: logger.rs
src/logs/: logger.rs
src/machine_learning/: activations.rs  matrix.rs  network.rs
src/ml/: activations.rs  matrix.rs  network.rs
src/ranking_algorithms/: job_type_matrix.rs  meta.rs  mod.rs  ranker.rs  t_score.rs
src/test/: common.rs  meta_test.rs  t_score_test.rs  test_setup.rs
test/: README.md  placeholder.rs
test/faker/: Cargo.toml
test/faker/src/: feed_faker.rs  lib.rs
test/unit/: Cargo.toml
test/unit/data/: jobs_valid.json  pref_basic.json  pref_valid.json  res_basic.json  res_valid.json
test/unit/data/jobs/: jobs_basic.json  jobs_invalid.json  jobs_valid.json
test/unit/src/: common.rs  lib.rs  meta_test.rs  mod.rs  placeholder.rs  t_score_test.rs
tests/: meta-test.rs
