[package]
name = "Embloy_feed_generator"
version = "0.1.0"
authors = ["Carlo Bortolan <carlobortolan@gmail.com>", "Jan Hummel <jan.hummel@tum.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = { version = "4", features = ["openssl"] }
actix-web = { version = "4" }
# openssl = { version = "0.10" }
actix-rt = "2.8.0"
base64 = "0.21.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
serde_derive = "1.0.130"
num_cpus = "1.14.0"
chrono = "0.4.24"
csv = "1.2"
ndarray = "0.15.6"
ndarray-csv = "0.5.1"
rand = "0.7.3"
smartcore = "0.3.1"

[[bin]]
name = "Embloy_feed_generator"
path = "src/main.rs"